cpp/test/Slice/errorDetection/RedefinitionAsOperation.err
RedefinitionAsOperation.ice:14 error: redefinition of `member' as operation
