cpp/test/Slice/errorDetection/RedefinitionAsOperation.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class Class
{
    int member;
    void member();
};
